# HelperU_v2

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  PushTokenSecret.p8  README.md  SUPABASE_STORAGE_SETUP.md  docker-compose.yml  encode.py  env.template  otp_test.py  package-lock.json  pyproject.toml  sendNotification.py  test_ai_agent_structure.py
ai_agent/: README.md  __init__.py  config.py  example.py  requirements.txt  router.py  system.py
ai_agent/agents/: __init__.py  application_processor.py  base.py  chat_moderator.py  notification_coordinator.py  payment_processor.py  task_manager.py  user_assistant.py
ai_agent/tools/: __init__.py  application_tools.py  auth_tools.py  base.py  chat_tools.py  notification_tools.py  payment_tools.py  profile_tools.py  task_tools.py
ai_agent/workflows/: __init__.py  application_workflow.py  base.py  dispute_workflow.py  task_workflow.py
app/: main.py
app/ai_agent/: base.py  config.py  requirements.txt  router_agent.py
data/: checkpoints.sqlite-shm
data_migration/: README_HELPER_MIGRATION_V2.md  README_TASK_MIGRATION_V2.md  SUPABASE_MIGRATION_README.md  clear_database.py  failed_tasks.csv  fill_auth_users_fields.sql  migrate_clients.py  migrate_clients_supabase.py  migrate_helpers_supabase.py  migrate_helpers_v2.py  migrate_tasks_v2.py  output.txt  requirements_migration.txt
tests/: README_AI_AGENT_TEST.md  README_HELPER_SIGNUP_TEST.md  README_MIGRATED_ACCOUNT_TEST.md  README_SIMPLE_CHAT.md  debug_auth_flow.py  simple_chat_test.py  test_ai_agent_client.py  test_ai_agent_simple.py  test_fix.py
(+68 files in other folders)
