[project]
name = "helperu-backend"
version = "0.1.0"
description = "FastAPI + Supabase template"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.3.4",
  "pydantic-extra-types==2.8.0",
  "python-dotenv==1.0.1",
  "supabase==2.4.5",
  "httpx[http2]==0.27.0",
  "stripe==8.10.0",
  "websockets==12.0",
  "langchain>=0.3.27",
  "langgraph>=0.6.6",
  "langgraph-supervisor>=0.0.29",
  "langgraph-checkpoint-sqlite>=2.0.11",
  "langchain-openai>=0.3.32",
  "exponent-server-sdk>=2.2.0",
  "aiosqlite>=0.20.0",
]

[tool.uv]
# Create a local .venv and manage with uv
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
